--- a/style.css
+++ b/style.css
@@ -69,28 +69,29 @@ input[type="search"] {
     flex-direction: row;
     align-items: stretch;
     justify-content: space-between;
-    height: 30rem;
+    height: 33rem;
 }
 
 .mainPart {
     background-color: #FFF9FB;
     width: 80%;
-    height: 100%;
     margin: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     
 }
 
 .rectangle {
 
     width: 10rem;
-    height: 30rem;
     background-color: #4b88a2;
     margin: 1rem;
 }
 
 #middleSquare {
-    width: 10rem;
-    height: 8rem;
+    width: 30%;
+    height: 12rem;
     background-color: #4b88a2;
     margin-right: 1rem;
 }
@@ -107,4 +108,10 @@ input[type="search"] {
 
 #middleText{
     flex: 1rem;
+    color: #252627;
+}
+
+#lowerText {
+    margin: 1rem;
+    color: #252627;
 }
