--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
-.body{
+body {
+    margin: 0;
     background-color: #D3D4D9;
 }
 
@@ -33,7 +34,7 @@
     display: inline-block;
     width: 1.5rem;
     height: 1.5rem;
-    background-image: url(magnifying_glass_icon.png);
+    background-image: url(img/magnifying_glass_icon.png);
     background-size: contain;
     background-repeat: no-repeat;
 }
@@ -55,9 +56,19 @@
     margin-right: 3rem;
     background-color: #D3D4D9;
     position: relative;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    /* padding: 0.5rem 0; */
 }
 
-#rightSquare::before,
+#rightSquare>hr {
+    width: 80%;
+    border-width: 0.2rem;
+}
+
+/* #rightSquare::before,
 #rightSquare::after {
     content: "";
     position: absolute;
@@ -65,7 +76,7 @@
     right: 10%;
     height: 0.1rem;
     background-color: black;
-}
+} */
 
 #rightSquare::before {
     top: 20%;
@@ -111,7 +122,6 @@
     width: 30%;
     height: 12rem;
     background-color: #4b88a2;
-    margin-right: 1rem;
 }
 
 #upperText {
@@ -119,7 +129,7 @@
     color: #252627;
 }
 
-#upperText::after {
+/* #upperText::after {
     content: "";
     display: block;
     width: 60%;
@@ -135,19 +145,29 @@
     height: 0.05rem;
     background-color: black;
     margin: 1rem auto 2.5rem auto;
+} */
+
+.mainPart>hr {
+    width: 80%;
 }
 
 .middleContent {
     display: flex;
     margin: 1rem;
+    gap: 1rem
 }
 
 #middleText {
     flex: 1rem;
+    margin: 0;
     color: #252627;
 }
 
 #lowerText {
     margin: 1rem;
     color: #252627;
+}
+
+#special-word {
+    color: blue;
 }
